[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameDVDCardtridge/TostLeveling/TostLeveling.gd" type="Script" id=1]
[ext_resource path="res://fonts/Built/Ubuntu_M_48tred.tres" type="FontFile" id=2]
[ext_resource path="res://GameDVDCardtridge/404/uiPart/Menu404.tscn" type="PackedScene" id=3]
[ext_resource path="res://font/ubuntu-font-family-0.83/Ubuntu-B.ttf" type="FontFile" id=4]


[sub_resource type="FontFile" id=1]
resource_local_to_scene = true
resource_name = "Ubuntu Bold 48"
size = 48
outline_size = 1
outline_color = Color( 0.168627, 0, 0, 1 )
font_data = ExtResource( 4 )

[node name="TostLeveling" type="Node"]
script = ExtResource( 1 )

[node name="LevelSlot" type="Node" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Optioner" type="HBoxContainer" parent="CanvasLayer/UI/VBoxContainer"]
offset_top = 876.0
offset_right = 1920.0
offset_bottom = 976.0
custom_minimum_size = Vector2( 0, 100 )
mouse_filter = 2
alignment = 1

[node name="Unload" type="Button" parent="CanvasLayer/UI/VBoxContainer/Optioner"]
offset_right = 380.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource( 2 )
text = "Unload"

[node name="Level 1" type="Button" parent="CanvasLayer/UI/VBoxContainer/Optioner"]
offset_left = 384.0
offset_right = 764.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource( 2 )
text = "Level 1"

[node name="Level 2" type="Button" parent="CanvasLayer/UI/VBoxContainer/Optioner"]
offset_left = 768.0
offset_right = 1148.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource( 2 )
text = "Level 2"

[node name="Level 3" type="Button" parent="CanvasLayer/UI/VBoxContainer/Optioner"]
offset_left = 1152.0
offset_right = 1532.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource( 2 )
text = "Level 3"

[node name="Level 4" type="Button" parent="CanvasLayer/UI/VBoxContainer/Optioner"]
offset_left = 1536.0
offset_right = 1920.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource( 2 )
text = "Level 4"

[node name="Menu404" parent="CanvasLayer/UI/VBoxContainer" instance=ExtResource( 3 )]

[node name="ChangeDVDButton" parent="CanvasLayer/UI/VBoxContainer/Menu404" index="0"]
theme_override_fonts/font = SubResource( 1 )

[node name="ExitGameButton" parent="CanvasLayer/UI/VBoxContainer/Menu404" index="1"]
theme_override_fonts/font = SubResource( 1 )
[connection signal="pressed" from="CanvasLayer/UI/VBoxContainer/Optioner/Unload" to="." method="_on_Unload_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/VBoxContainer/Optioner/Level 1" to="." method="_on_Level_1_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/VBoxContainer/Optioner/Level 2" to="." method="_on_Level_2_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/VBoxContainer/Optioner/Level 3" to="." method="_on_Level_3_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/VBoxContainer/Menu404/ChangeDVDButton" to="." method="_on_ChangeDVDButton_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/VBoxContainer/Menu404/ExitGameButton" to="." method="_on_ExitGameButton_pressed"]

[editable path="CanvasLayer/UI/VBoxContainer/Menu404"]
